# Aula20

./: README.md  docker-compose.yml  pyproject.toml
Backend/: crud.py  database.py  models.py  requirements.txt  router.py  schema.py
Frontend/: Dockerfile
