[project]
name = "aula20"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathas Pereira",email = "pjonathas972@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
